@@ -1,5 +1,4 @@
 BootStrapl: debootstrap
-DistType "debian"
 MirrorURL: http://us.archive.ubuntu.com/ubuntu/
 OSVersion: xenial
 
